parse/internal/parser/testdata/failing/union-fields-after-ignore.trunnel
struct field_after_ignore {
    u8 tag;
    union addr[tag] {
       4 : ignore; u8 b;
    };
}
